# trndwtchai

./: .env_db  .gitignore  README.md  README.txt  admin.py  appium_test.py  appium_tester.ipynb  check.ipynb  cookies.txt  env_db  errors  get_usernames.ipynb  get_usernames.py  main.py  main2.py  main2_copy.py  main2_inprogresspy  main2_pool.py  main2_thread.py  pyproject.toml  requirements.txt  results.json  shares_manual.py  start.bat  test  test.ipynb  test_struct.py  test_threads_v01.py  test_threads_v02.py  tiktok.py  translator.ipynb  work_with_sheets.ipynb
backup/: apify_ApifyInstaScraper.py  appium_dev.py  dailyScrapper.py  main2 (copy).py  main2_thread.py  main_manual.py  test5.py  test_import.py  tester.py  torchtest.py
manual_work/: kumarsolo_result_20241231.json  manual_work.ipynb
static/: DELETE.json  admin.html  index (copy).html  index.html
utils/: apify.py  framedetect.py  ggl.py  js1234.json  prompts.py  shares.py  texthook.py  tg.py
utils/prompts/: agent1.py  agent2.py
