[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
uvicorn = "^0.30.6"
fastapi = "^0.114.2"
pydantic = "^2.9.1"
apify-client = "^1.8.1"
faster-whisper = "^1.0.3"
requests = "^2.32.3"
gspread = "6.1.3"
oauth2client = "4.1.3"
schedule = "^1.2.2"
pytz = "^2024.2"
setuptools = "^75.5.0"
apscheduler = "^3.10.4"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"